# FrameX---Media-Player

./: .gitattributes  .gitignore  LICENSE  README.md  build_debug.txt  build_log.txt  build_log_final.txt  build_log_final_2.txt  build_log_nsis.txt  index.html  large_files.txt  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  build_error.txt  build_errors.txt  build_log.txt  check_output.txt  check_output_after_tokio.txt  check_output_full.txt  final_check.txt  release_check.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/mpv/: mpv.lib
src-tauri/mpv-config/: input.conf  mpv.conf
src-tauri/mpv-config/scripts/: framex-controls.lua  framex-osc.lua
src-tauri/src/: config.rs  discord_rpc.rs  file_scanner.rs  lib.rs  main.rs  metadata.rs  mpv_handler.rs  playlist.rs  subtitle_downloader.rs  thumbnail_generator.rs  watch_history.rs
src-tauri/src/ai/: gemini.rs  whisper.rs
src/components/: TimelinePreview.tsx
src/components/AISettings/: AISettings.tsx
src/components/AISidebar/: AISidebar.tsx
src/components/AudioSettings/: AudioSettings.tsx
src/components/EnhancedSettingsModal/: EnhancedSettingsModal.tsx
src/components/Equalizer/: Equalizer.tsx
src/context/: FileContext.tsx  SettingsContext.tsx  ThemeContext.tsx
src/hooks/: useGestures.ts
src/pages/: HomeScreen.tsx  PlayerOverlay.tsx
src/themes/: presets.ts
src/types/: playlist.ts  settings.ts  theme.ts
src/utils/: PluginManager.ts
(+9 files in other folders)
