[package]
name = "tauri-appframe-x"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_appframe_x_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
libmpv2 = "5.0.3"
raw-window-handle = "0.6.2"
walkdir = "2.5.0"
rayon = "1.11.0"
base64 = "0.22.1"
image = "0.25.9"
uuid = { version = "1.20.0", features = ["v4"] }
reqwest = { version = "0.13.2", features = ["json", "blocking", "multipart"] }
tauri-plugin-shell = "2"
regex = "1"
urlencoding = "2.1"
tauri-plugin-http = "2.5.7"


